manifest-dev/power/templates/service.yaml
---
# Source: power/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: power
  labels:
    helm.sh/chart: power-0.1.0
    app.kubernetes.io/name: power
    app.kubernetes.io/instance: power
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: power
    app.kubernetes.io/instance: power
