manifest-dev/power/templates/ingress.yaml
---
# Source: power/templates/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: power
  labels:
    helm.sh/chart: power-0.1.0
    app.kubernetes.io/name: power
    app.kubernetes.io/instance: power
    app.kubernetes.io/managed-by: Helm
  annotations:
    konghq.com/override: power-https-redirect
    konghq.com/plugins: power-rate-limiting-by-ip,power-cors
    kubernetes.io/ingress.class: kong
spec:
  tls:
    - hosts:
        - "dev.power-cluster-65655d4c73bf47a3300821aa2939abf4-0001.eu-de.containers.appdomain.cloud"
      secretName: power-cluster-65655d4c73bf47a3300821aa2939abf4-0001
    - hosts:
        - "dev.power.niedersachsen.dev"
      secretName: power-niedersachsen-dev
  rules:
    - host: "dev.power-cluster-65655d4c73bf47a3300821aa2939abf4-0001.eu-de.containers.appdomain.cloud"
      http:
        paths:
          - path: /
            backend:
              serviceName: power
              servicePort: 80
    - host: "dev.power.niedersachsen.dev"
      http:
        paths:
          - path: /
            backend:
              serviceName: power
              servicePort: 80
